Fix sending email error when no email is specified; Fix reservation page displaying only 6 reservations; Make site more mobile friendly by removing fixed px widths and add minimum size for buttons, and enable text wrappings

--- a/client/src/components/ReservedTable/ReservedTableAdmin.css
+++ b/client/src/components/ReservedTable/ReservedTableAdmin.css
@@ -1,8 +1,4 @@
 div.edit {
-    padding-top: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
 }
 
 div.error {
