--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.react-bs-table table th,
+.react-bs-table table td
+{
+ 	font-size: calc(1vw + 5px);
+  	white-space: normal !important;
+  	word-wrap: normal !important;
+  	overflow: visible !important;
+}
